--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/Sourcegraph_Logomark_Color.png" />
+    <link rel="icon" href="https://github.com/sourcegraph/support-generator/blob/main/public/images/Sourcegraph_Logomark_Color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
